<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GGIS UAV Companion</string>
    <string name="tagline">Mirror your controller to Pilot Ops</string>
    <string name="email">Work email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="pair_title">Pair controller</string>
    <string name="pair_hint">Enter the 6-digit code shown in Pilot Ops when the mission started.</string>
    <string name="pair_code">000000</string>
    <string name="pair_connect">Connect to mission</string>
    <string name="pair_use_active">Use my active mission instead</string>
    <string name="active_mission">Active mission</string>
    <string name="start_casting">Start casting</string>
    <string name="idle">Idle</string>
    <string name="cast_hint">Casting mirrors your whole screen to the mission livestream. Keep the flight app in the foreground.</string>
    <string name="activate_title">Activate this controller</string>
    <string name="activate_hint">This controller isn\'t licensed yet. Enter the Pilot Ops license key from your provider to bind the app to this device.</string>
    <string name="activate_key">PLOPS-XXXX-XXXX-XXXX</string>
    <string name="activate_button">Activate this controller</string>
</resources>
